Optimized. Needs link to s1.

--- a/html/s0/index.html
+++ b/html/s0/index.html
@@ -1,5 +1,4 @@
-<html>
-    <head>
+<html><head>
         <title>Hello, neo.</title>
         <!-- NullUsxr 2022 -->
         <style>
@@ -17,5 +16,5 @@
     <body>
     <img src="hello_neo.gif" alt="Neo, this is an image.">
     <p style="color:black;">Insert link to s1 here</p>
-    </body>
-</html>
+    
+</body></html>
